@@ -29,6 +29,8 @@ https://github.com/elastic/beats/compare/v5.0.0-rc1...5.0[Check the HEAD diff]
 
 *Affecting all Beats*
 
+- Fix kafka output re-trying batches with too large events. {issue}2735[2735]
+
 *Metricbeat*
 
 *Packetbeat*
